---
source: crates/ruff_linter/src/rules/flake8_bandit/mod.rs
---
--- Linter settings ---
-linter.preview = disabled
+linter.preview = enabled

--- Summary ---
Removed: 0
Added: 3

--- Added ---
S312 Telnet is considered insecure. Use SSH or some other encrypted protocol.
 --> S312.py:7:5
  |
7 | map(Telnet, [])
  |     ^^^^^^
  |


S312 Telnet is considered insecure. Use SSH or some other encrypted protocol.
 --> S312.py:8:7
  |
8 | foo = Telnet
  |       ^^^^^^
  |


S312 Telnet is considered insecure. Use SSH or some other encrypted protocol.
  --> S312.py:11:5
   |
11 | _ = telnetlib.Telnet
   |     ^^^^^^^^^^^^^^^^
   |
